tests/errors/nested-test/E6002_dir_not_found.ez
/*
 * Error Test: E6002 - module-not-found (directory)
 * Expected: "module not found" or "directory not found"
 */

import "../nonexistent_directory/module"

do main() {
    println("test")
}
